--- a/main/blog/templates/single-blog.html
+++ b/main/blog/templates/single-blog.html
@@ -3,7 +3,7 @@
 {% block title %}{{ post.title }} | وبلاگ شما{% endblock %}
 
 {% block css %}
-<link href="{% static 'pages/css/blog.css' %}" rel="stylesheet" />
+<link href="{% static 'pages/css/single-blog.css' %}" rel="stylesheet" />
 <link href="{% static 'pages/css/inner_pages.rtl.css' %}" rel="stylesheet" />
 <link href="{% static 'css/home_1_style.rtl.css' %}" rel="stylesheet" />
 
