--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -95,7 +95,7 @@
             <div class="inf">
               <small class="fsz-13 d-block">خط تلفن 24/7</small>
               <h6 class="fsz-20 color-blue1 fw-bold">
-                <a href="tel:(025)36862516">{{company_info.contact_phone}}</a>
+                <a href="tel:{{company_info.contact_phone}}">{{company_info.contact_phone}}</a>
               </h6>
             </div>
           </div>
