--- a/main/templates/partials/add_address_form.html
+++ b/main/templates/partials/add_address_form.html
@@ -35,7 +35,7 @@
           <select
             class="form-control form-select"
             id="province"
-            name="state"
+            name="province"
             onchange="iranwebsv(this.value)"
             required
           >
@@ -109,21 +109,21 @@
         </div>
       </div>
       
-      <div class="col-lg-12">
-        <div class="form-group mb-4">
-          <label for="address">
-          <label for="address">
-            آدرس کامل<span class="color-red1">*</span>
-          </label>
-          <textarea
-            class="form-control"
-            id="address"
-            name="address"
-            placeholder="خیابان، پلاک، واحد، طبقه و ..."
-            rows="3"
-            required
-          ></textarea>
-        </div>
+      <div class="col-12">
+		<div class="form-group mb-4">
+			<label for="address">
+			آدرس کامل<span class="color-red1">*</span>
+			</label>
+			<textarea
+			class="form-control w-100"
+			id="address"
+			name="address"
+			placeholder="خیابان، پلاک، واحد، طبقه و ..."
+			rows="4"
+			required
+			></textarea>
+		</div>
+		</div>
       </div>
     </div>
   </div>
