--- a/main/products/templates/product_detail.html
+++ b/main/products/templates/product_detail.html
@@ -189,12 +189,12 @@
                             
                             {% include 'product_count.html' with product=product %}
                             
-                    </div>
+            </div>
             {% else %}
             <div class="text-center mt-3">
               <div class="d-flex align-items-center justify-content-center gap-2">
                 <span class="text-muted small">قیمت:</span>
-                <a href="tel:+982122223333" class="text-decoration-none">
+                <a href="tel:{{company_info.contact_phone}}" class="text-decoration-none">
                   <span class="badge text-bg-light border border-1 border-success text-success rounded-pill px-3 py-1">
                     <i class="fas fa-phone-volume me-1 small"></i>
                     استعلام قیمت
@@ -210,7 +210,7 @@
                 <i class="la la-tty me-1"></i>
                 <small>سفارش سریع 24/7</small>
               </span>
-              <h5 class="fsz-22 mt-3 fw-bold">(025) 3886 25 16</h5>
+              <h5 class="fsz-22 mt-3 fw-bold"><a href="tel:{{company_info.contact_phone}}">{{company_info.contact_phone}}</a></h5>
             </div>
             
             <p class="color-000 mt-15">
@@ -319,7 +319,7 @@
                         {% else %}
                           <p class="fsz-12 mt-2">
                             <i class="fas fa-phone-alt me-1"></i>
-                            <a href="#"> تماس بگیرید</a>
+                            <a href="tel:{{company_info.contact_phone}}">{{company_info.contact_phone}}</a>
                           </p>
                         {% endif %}
                       </h5>
